# 2dEngine

./: CMakeLists.txt  README.md  imgui.ini
res/shaders/: shader.frag  shader.vert
src/: UI.cpp  UI.h  main.cpp  pch.h
src/UI/: CommandManager.cpp  CommandManager.h  UI.cpp  UI.h
src/UI/console/: Console.cpp  Console.h
src/graphics/: FrameBuffer.cpp  FrameBuffer.h  Graphics.h  Shader.cpp  Shader.h
